# Schnapsen

./: README.md  docker-compose.dev.yaml  docker-compose.yaml  saus
.github/workflows/: publish-schnapsen-rs.yml
game-server/: Cargo.toml  Dockerfile
game-server/src/: listener.rs  main.rs
game-server/src/games/: mod.rs
proxy/: haproxy.cfg
schnapsen-ai-client/: Dockerfile  Dockerfile.dev  README.md  ai-routes.ts  bun.lockb  index.ts  package-lock.json  package.json  types.ts
schnapsen-duo-server/: Cargo.toml  Dockerfile  Dockerfile.dev  entrypoint.dev.sh
schnapsen-duo-server/src/: emitter.rs  event_logger.rs  listener.rs  main.rs  models.rs  performer.rs  translator.rs
schnapsen-duo-server/src/events/: event_logger.rs  mod.rs
schnapsen-duo-server/src/match_manager/: mod.rs
schnapsen-rs/: Cargo.toml
schnapsen-rs/src/: client.rs  lib.rs  scheduler.rs  tests.rs
schnapsen-rs/src/models/: mod.rs
