[package]
name = "schnapsen-duo-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
reqwest = { version = "0.12.5", features = ["json"] }
rust_socketio = "0.6.0"
serde = { version = "1.0.207", features = ["derive"] }
serde_json = "1.0.124"
socketioxide = "0.14.1"
tokio = { version = "1.38.1", features = ["rt", "macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
schnapsen-rs = { path = "../schnapsen-rs" }
num_enum = "0.7.3"
thiserror = "1.0.63"
