[package]
name = "schnapsen-rs"
description = "Schnapsen implementation in Rust"
license = "MIT"
version = "0.1.100"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.207", features = ["derive"] }
serde_json = "1.0.124"
num_enum = "0.7.3"
rand = "0.8.5"
chrono = "0.4.38"
